@@ -6,14 +6,15 @@ SUBDIRS = source
 DIST_SUBDIRS = source 
 
 all-am: source/darkbot$(EXEEXT)
-	cp -f source/darkbot$(EXEEXT) .
+	@CP@ source/darkbot$(EXEEXT) .
 	
 convertdb: source/convertdb$(EXEEXT)
-	cp -f source/convertdb$(EXEEXT) .
+	@CP@ -f source/convertdb$(EXEEXT) .
 
 install-exec-local:
-	$(INSTALL) -d -m 755 $(prefix)
-	$(INSTALL) -m 744 ./source/darkbot $(prefix)
+	@echo
+	@INSTALL@ -d -m 755 $(prefix)
+	@INSTALL@ -m 744 ./source/darkbot $(prefix)
 	@echo 
 	@echo darkbot-`cat VERSION` has been installed to $(prefix)
 	@echo
